[tool.poetry]
name = "dreamer-pytorch"
version = "0.1.0"
description = ""
authors = ["Julius Frost <33183774+juliusfrost@users.noreply.github.com>"]
readme = "README.md"
packages = [
    {include = "dreamer" },
    {include = "rlpyt", from = "rlpyt"}
]

[tool.poetry.dependencies]
python = "~3.11"
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp311-cp311-linux_x86_64.whl" }
opencv-python = "^4.8.0.74"
numpy = "^1.25.0"
psutil = "^5.9.5"
pyprind = "^2.11.3"
tqdm = "^4.65.0"
tensorboard = "^2.13.0"
moviepy = "^1.0.3"
atari-py = "^0.2.9"
dm-control = "^1.0.13"
gym = "^0.26.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
pre-commit = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
